--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,64 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
   <app-root></app-root>
+  
+
+
+  <script>
+    function logout(){
+      localStorage.clear()
+        localStorage.setItem("login","false")
+        window.location.reload()
+    }
+    
+    function parseJwt (token) {
+    var base64Url = token.split('.')[1];
+    var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+    var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+    }).join(''));
+
+    return jsonPayload;
+};
+    function handleCredentialResponse(response) {
+      console.log("Encoded JWT ID token: " + parseJwt(response.credential));
+      localStorage.setItem("login",true)
+      console.log(response)
+      localStorage.setItem("data", parseJwt(response.credential))
+      var data=JSON.parse(localStorage.getItem('data'))
+      var name=data['email']
+      localStorage.setItem("jwt", name)
+      location.reload();
+      //xhr.send(JSON.stringify({'jwt':response.credential}));
+      //window.location.href=window.location.href+'upload'
+    }
+    window.onload = function () {
+          google.accounts.id.initialize({
+            client_id: "21450313655-ub95a7ocf8sa420p1n7oclpduinu422e.apps.googleusercontent.com",
+            callback: handleCredentialResponse
+          });
+          google.accounts.id.renderButton(
+            document.getElementById("buttonDiv"),
+            { theme: "outline", size: "large" }  // customization attributes
+          );
+           // also display the One Tap dialog
+
+          if(localStorage.getItem('login')=='true'){
+      var data=JSON.parse(localStorage.getItem('data'))
+      var name=data['given_name']
+      document.getElementById('logged').innerHTML=`<h1>Hello ${name}<button onClick="logout()">logout</logout>`
+    }
+    else{
+      google.accounts.id.prompt();
+    }
+        }
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
